Removed yellow label for completed months, formatted weeks correctly, aligned fleets correctly

--- a/public/css/addons.css
+++ b/public/css/addons.css
@@ -30,3 +30,6 @@
 .sng-last-row {
     background-color: #FFEE99 !important;
 }
+.sng-text-right {
+    text-align: right;
+}
